<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="1dp"
    android:fillViewport="false"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        tools:context=".MainActivity"
        >
        <TextView
            android:id="@+id/textview_text1"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/voice_language"
            />
        <Spinner
            android:id="@+id/spinner_src_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:contentDescription="@string/spinner_src_languages"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            />
        <TextView
            android:id="@+id/textview_src_dialect"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textview_src"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="18sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            >
        <CheckBox
            android:id="@+id/checkbox_offline_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/use_offline_mode"
            />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="18sp"
            />
        <TextView
            android:id="@+id/textview_text2"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/translation_language"
            />
        <Spinner
            android:id="@+id/spinner_dst_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:contentDescription="@string/voice_language"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            />
        <TextView
            android:id="@+id/textview_dst_dialect"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textview_dst"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="18sp"
            />
        <Button
            android:id="@+id/button_toggle_overlay"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/toggle_overlay"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="18sp"
            />
        <EditText
            android:id="@+id/voice_text"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:autofillHints=""
            android:gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:maxLines="3"
            android:textSize="18sp"
            android:textAlignment="gravity"
            android:textColorHint="#616161"
            tools:ignore="SpeakableTextPresentCheck"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="18sp"
            />
        <TextView
            android:id="@+id/textview_debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="18sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="16sp"
            />
        <TextView
            android:id="@+id/textview_debug2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="18sp"
            />

    </TableLayout>
</ScrollView>
